# habit_tracker

./: .env.example  README.md  package-lock.json  pyproject.toml  start.sql
app/: config.py  main.py
app/middleware/: auth.py
app/models/: habit.py  habit_log.py
app/routes/: auth.py  habits.py
app/services/: auth.py  supabase.py
app/static/css/: main.css
app/templates/: base.html  index.html
app/templates/auth/: form_base.html  login.html  signup.html
app/templates/habits/: index.html
